增加了ContentProvider进程内通信及跨进程通信

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,5 +21,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sqlite_demo"/>
+    <Button
+        android:id="@+id/go_contentprovider_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/contentprovider_demo"/>
 
 </LinearLayout>
